--- a/components/grouprequest/default.htm
+++ b/components/grouprequest/default.htm
@@ -1,11 +1,12 @@
 <div class="row group">
-	<form
+<h4>{{ user.name|title }} your have invited to join</h4>	
+<form
 	    id="group-request">
 
 	        <table class="table table-hover">
 				<thead>
 					<tr>
-						<th>Request to join</th>
+						<th>Group created by</th>
 		        		<th></th>
 		        		<th></th>
 		        	</tr>
