--- a/components/grouprequest/list.htm
+++ b/components/grouprequest/list.htm
@@ -1,17 +1,20 @@
 {% for group in groups %}
     <tr>
-    	<td>{{ group.id }}</td>
-		<td>{{ group.owner.name }}</td>
-        <td></td>
-		<td>
-			<input type="hidden" name="users[]" value="{{ group.id }}" />
-	        <button type="button" 
-	            class="close pull-right" 
-	            aria-hidden="true" 
-	            class="" 
-	            data-request-data="removeUser: {{ user.id }}"
-	            data-request-success="$($el).closest('tr').remove()"
-	            data-request="onDelete" data-request-confirm="Are you sure?">&times;</button>
-	    </td>
+    	<td>{{ group.owner.name }}</td>
+		<td>{{ group.pivot.membership_status }}</td>
+    	<td>
+			<div class="btn-group pull-right" data-toggle="buttons">
+			  {% for key, option in options %} 
+			  <label class="btn btn-default">
+			    <input type="radio" 
+			    	name="options" 
+			    	id="option{{ loop.index }}"  
+			    	data-request-data="groupId: {{ group.id }}, status: '{{ key }}'"
+			    	data-request="onChangeStatus"> 
+			    {{ option|capitalize }}
+			  </label>
+			  {% endfor %}
+			</div>
+    	</td>
     </tr>
 {% endfor %}
