- Improved display and query that list Group request.  Only request that are from active groups and are pending or accepted will be displayed. - Improved getUsers query in UserGroups, now is a real query instead of a Laravel filter. - Implemented logic to allow re-invited users that have cancelled or rejected a Group request.

--- a/components/grouprequest/default.htm
+++ b/components/grouprequest/default.htm
@@ -1,5 +1,5 @@
 <div class="row group">
-<h4>{{ user.name|title }} your have invited to join</h4>	
+<h4>{{ user.name|title }} you have invited to join</h4>	
 <form
 	    id="group-request">
 
