--- a/components/grouprequest/list.htm
+++ b/components/grouprequest/list.htm
@@ -1,18 +1,24 @@
 {% for group in groups %}
+	{% set status 	 = group.pivot.membership_status %}
+	{% set optStatus = (status|upper == 'PENDING') ? ['ACCEPTED', 'REJECTED'] : ['CANCELLED']  %}
+	{% set optStatus = (status|upper == 'CANCELLED') ? [] : optStatus  %}
     <tr>
     	<td>{{ group.owner.name }}</td>
-		<td>{{ group.pivot.membership_status }}</td>
+		<td>{{ status }}</td>
     	<td>
 			<div class="btn-group pull-right" data-toggle="buttons">
 			  {% for key, option in options %} 
-			  <label class="btn btn-default">
-			    <input type="radio" 
-			    	name="options" 
-			    	id="option{{ loop.index }}"  
-			    	data-request-data="groupId: {{ group.id }}, status: '{{ key }}'"
-			    	data-request="onChangeStatus"> 
-			    {{ option|capitalize }}
-			  </label>
+				  {% if key in optStatus %}
+				  <label class="btn btn-default">
+				    <input type="radio" 
+				    	name="options" 
+				    	id="option{{ loop.index }}"  
+				    	data-request-data="groupId: {{ group.id }}, status: '{{ key }}'"
+				    	data-request-update="'{{ __SELF__ }}::list': '#result'"	  
+				    	data-request="onChangeStatus"> 
+				    {{ option|capitalize }}
+				  </label>
+				  {% endif %}
 			  {% endfor %}
 			</div>
     	</td>
