--- a/components/groupformcreation/default.htm
+++ b/components/groupformcreation/default.htm
@@ -6,7 +6,7 @@
 	    id="add-users">
 	    <div class="panel panel-default">
 	        <div class="panel-heading">
-	            <h3 class="panel-title">{{ owner.name }} your can invite friends to join your group</h3>
+	            <h3 class="panel-title">{{ owner.name }} you can invite friends to join your group</h3>
 	        </div>
 	        <div class="panel-body" id="user-search">
 	            <div class="input-group">
