Added ability to redeem rewards via component

--- a/components/getrewards/default.htm
+++ b/components/getrewards/default.htm
@@ -1,6 +1,7 @@
 <div class="row rewards">
     {% for reward in rewards %}
-        {{ reward|raw }}
+        {{ reward.rendered|raw }}
+        <button data-request="onRedeem" data-request-data="id: {{ reward.id }}">Redeem</a>
     {% endfor %}
 
     <div class="links">
