--- a/views/rewardPreview.htm
+++ b/views/rewardPreview.htm
@@ -4,6 +4,8 @@
 
         <div class="description">
             {{ reward.excerpt }}
+            <p>Points: {{ reward.points }}</p>
         </div>
+
     </div>
 </div>
