--- a/reportwidgets/friendsleaderboard/partials/_widget.htm
+++ b/reportwidgets/friendsleaderboard/partials/_widget.htm
@@ -1,9 +1,27 @@
 <div class="report-widget leaderboard">
     <h3>Leaderboard</h3>
     <table class="table data">
+        <thead>
+            <tr>
+                <th class="sort-desc active list-cell-name-title">
+                    Name
+                </th>
+                <th>
+                    Points Earned Today
+                </th>
+                <th>
+                    Points Earned This Week
+                </th>
+                <th>
+                    Total Points
+                </th>
+            </tr>
+        </thead>
     <?php foreach($users as $user) { ?>
         <tr>
             <td><?php print $user->metadata->first_name ?> <?php print $user->metadata->last_name ?></td>
+            <td><?php print number_format($user->points_today) ?></td>
+            <td><?php print number_format($user->points_this_week) ?></td>
             <td><?php print number_format($user->points) ?></td>
         </tr>
     <?php } ?>
