--- a/components/groupformcreation/default.htm
+++ b/components/groupformcreation/default.htm
@@ -1,45 +1,72 @@
 <div class="row group">
-	<form
-	    data-request="{{ __SELF__ }}::onAdd"
-   		data-request-update="'{{ __SELF__ }}::list': '#result'"	    
-	    data-request-success="$('#input-user').val('')"
-	    id="add-users">
-	    <div class="panel panel-default">
-	        <div class="panel-heading">
-	            <h3 class="panel-title">{{ owner.name }} you can invite friends to join your group</h3>
-	        </div>
-	        <div class="panel-body" id="user-search">
-	            <div class="input-group">
-	                <input type="text" id="input-user" class="form-control" value="" name="newUser" 
-	                data-track-input=""
-	                data-request="{{ __SELF__ }}::onSearchUser"
-	                data-request-before-update="$('#autocomplete').removeClass('hidden')"
-	                data-request-update="'{{ __SELF__ }}::autocomplete': '#autocomplete'"	    
-	                placeholder="Type username of a Friend you wish to invite"> 
-	                <span class="input-group-btn">
-	                    <button type="submit" class="btn btn btn-primary {% if allowAdd == false %}disabled{% endif %}">
-	                    	Send invitation
-	                    </button>
-	                </span>
-	            </div>
-		        <ul class="list-group hidden" id="autocomplete">
-		        </ul>	            
-	        </div>
-	        <table class="table table-hover">
-				<thead>
-					<tr>
-						<th>Username</th>
-		        		<th>Name</th>
-		        		<th>Status</th>
-		        		<th></th>
-		        	</tr>
-	        	</thead>
-	        	
-	        	<tbody id="result">
-					{% partial __SELF__~"::list" %}
-				</tbody>
-	        </table>
-	    </div>
-	</form>
+	{% if editGroup %}
+	
+		<form
+		    data-request="{{ __SELF__ }}::onAdd"
+	   		data-request-update="'{{ __SELF__ }}::list': '#result'"	    
+		    data-request-success="$('#input-user').val('')"
+		    id="add-users">
+		    <div class="panel panel-default">
+		        <div class="panel-heading">
+		            <h3 class="panel-title">{{ owner.name }} you can invite friends to join your group</h3>
+		        </div>
+		        <div class="panel-body" id="user-search">
+		            <div class="input-group">
+		                <input type="text" id="input-user" class="form-control" value="" name="newUser" 
+		                data-track-input=""
+		                data-request="{{ __SELF__ }}::onSearchUser"
+		                data-request-before-update="$('#autocomplete').removeClass('hidden')"
+		                data-request-update="'{{ __SELF__ }}::autocomplete': '#autocomplete'"	    
+		                placeholder="Type username of a Friend you wish to invite"> 
+		                <span class="input-group-btn">
+		                    <button type="submit" class="btn btn-primary {% if allowAdd == false %}disabled{% endif %}">
+		                    	Send invitation
+		                    </button>
+		                </span>
+		            </div>
+			        <ul class="list-group hidden" id="autocomplete">
+			        </ul>	            
+		        </div>
+		        <table class="table table-hover">
+					<thead>
+						<tr>
+							<th>Username</th>
+			        		<th>Name</th>
+			        		<th>Status</th>
+			        		<th></th>
+			        	</tr>
+		        	</thead>
+		        	
+		        	<tbody id="result">
+						{% partial __SELF__~"::list" %}
+					</tbody>
+		        </table>
+		    </div>
+		</form>
+	
+	</div>
+	{% endif %}
+	
+	{% if addGroup %}
+	<div class="panel panel-default">
+		<div class="panel-heading">
+		    <h3 class="panel-title">{{ user.name }} you can create a group and invite friends to join to your group.</h3>
+		</div>
+		<div class="panel-body" id="user-search">
+		    <div class="input-group">
+		        <span class="input-group-btn">
+		            <button type="button" type="submit" class="btn btn-primary"
+			            class="close pull-right" 
+			            aria-hidden="true" 
+			            class="" 
+			            data-request-success="$($el).closest('tr').remove()"
+			            data-request="onCreateGroup"> Create a new group </button>
+		        </span>
+		    </div>
+		 <ul class="list-group hidden" id="autocomplete">
+		 </ul>	            
+		</div>
+	</div>
 
+	{% endif %}
 </div>
