- Managed unhanded exceptions when there isn’t an user authenticated in Notification counter, Notification list and Group Requests components. - Added third state to the  Group creation component  to handler users that are part of a group.

--- a/views/notifications/mail/group-request.htm
+++ b/views/notifications/mail/group-request.htm
@@ -8,7 +8,7 @@ Hello {{ toUser.name|title }},
 <p>
 <strong>{{ fromUser.name|title }}</strong> wants you to join his group.
 
-Click  <a href="/group/request">here</a> to accept his request.
+Click  <a href="http://octoberfriends.dma.org/group/request">here</a> to accept his request.
 
 </p>
 
