--- a/components/groupformcreation/default.htm
+++ b/components/groupformcreation/default.htm
@@ -69,4 +69,16 @@
 	</div>
 
 	{% endif %}
+	
+	{% if memberOfotherGroup %}
+	<div class="panel panel-default">
+		<div class="panel-heading">
+		    <h3 class="panel-title">{{ user.name }} you have active group memberships. </h3>
+		</div>
+		<div class="panel-body">
+			<p>You can review your group membershiop <a href="/group/request">here</a>.</p>
+		</div>
+	</div>
+
+	{% endif %}	
 </div>
