moved october.css out of plugin and into theme

--- a/components/activitycodeform/default.htm
+++ b/components/activitycodeform/default.htm
@@ -1,7 +1,7 @@
 <div class="dma-code-input">
-    {{ form_ajax('onSubmit', { class: 'activity-code' } ) }}
+    {{ form_ajax('onSubmit', { class: 'activity-code', success: "$('#activity-code').val('')" } ) }}
         <input id="activity-code" type="text" name="activity_code" placeholder="Enter Activity Code">
-        <button class="secondary" type="submit">Go</button>
+        <button class="secondary" type="submit" data-request-success="alert('asd');">Go</button>
     {{ form_close() }}
 
     {% component 'Modal' 
