added class to view all

--- a/components/activitystream/default.htm
+++ b/components/activitystream/default.htm
@@ -20,10 +20,10 @@
     <div class="col-md-4 col-xs-6">
         <ul class="filter-buttons-wrap button-group buttons">
             <li class="first">
-                <a class="filter-all button large current" href="#" data-request="onUpdate" data-request-data="filter: 'all'">View All</a>
+                <a class="filter-all button large current icon-align-justify" href="#" data-request="onUpdate" data-request-data="filter: 'all'">View All</a>
             </li>
             <li>
-                <a class="filter-stream-badge button large icon-cd" href="#" data-request="onUpdate" data-request-data="filter: 'Badge'">Badges</a>
+                <a class="filter-stream-badge button large icon-circle-o" href="#" data-request="onUpdate" data-request-data="filter: 'Badge'">Badges</a>
             </li>
             <li>
                 <a class="filter-stream-reward button large icon-trophy" href="#" data-request="onUpdate" data-request-data="filter: 'Reward'">Rewards</a>
@@ -32,7 +32,7 @@
                 <a class="filter-stream-activity button large icon-check" href="#" data-request="onUpdate" data-request-data="filter: 'Activity'">Activities</a>
             </li>
             <li>
-                <a class="filter-stream-step button large icon-dma" href="#" data-request="onUpdate" data-request-data="filter: 'Step'">Steps</a>
+                <a class="filter-stream-step button large icon-list-ol" href="#" data-request="onUpdate" data-request-data="filter: 'Step'">Steps</a>
             </li>
         </ul>
     </div>
