small style and text formatting tweaks

--- a/components/userlogin/default.htm
+++ b/components/userlogin/default.htm
@@ -1,8 +1,8 @@
 <div class="row login">
-    <div class="col-md-6">
+    <div class="col-md-6 col-sm-6">
         <a href="#" class="button alternate login pop" data-control="popup" data-handler="onLogin">Log in</a>
     </div>
-    <div class="col-md-6">
+    <div class="col-md-6 col-sm-6">
         <a href="#" class="button alternate register pop" data-control="popup" data-handler="onRegister">Register</a>
     </div>
 </div>
