--- a/views/rewardPreview.htm
+++ b/views/rewardPreview.htm
@@ -1,8 +1,15 @@
 <div class="col-md-6 col-sm-4">
     <div class="friends-reward preview">
-        <div class="description col-md-8">
+
+        <div class="image col-md-3 col-sm-3">
+            {% if reward.image.getPath() %}
+            <img src="{{ reward.image.getPath() }}"/>
+            {% endif %}
+        </div>
+        <div class="description col-md-5 col-sm-5">
+            
             <h4>{{ reward.title }}</h4>
-            {{ reward.excerpt }}
+            {{ reward.excerpt|raw }}
             
         </div>
 
