changed classes on buttons

--- a/views/rewardPreview.htm
+++ b/views/rewardPreview.htm
@@ -15,7 +15,7 @@
 
         <div class="claim col-md-4">
             <p>Claim for</p>
-            <button data-request="onRedeem" data-request-data="id: {{ reward.id }}">{{ reward.pointsFormatted }} points</a>
+            <button class="btn btn-primary" data-request="onRedeem" data-request-data="id: {{ reward.id }}">{{ reward.pointsFormatted }} points</a>
         </div>
 
     </div>
