--- a/components/userprofile/default.htm
+++ b/components/userprofile/default.htm
@@ -1,5 +1,5 @@
 <form id="user-profile" class="row">
-    <div class="col-md-6">
+    <div class="col-md-6 col-sm-6">
         <div class="form-group">
             <label>First Name</label>
             <input type="text" name="metadata[first_name]" class="form-control" value="{{ user.metadata.first_name }}" />
@@ -19,7 +19,7 @@
             <a href="#" data-control="popup" data-handler="onPassword">Change Password</a>
         </div>
 
-         <div class="checkbox">
+         <div class="form-group">
             <label>
                 <input type="checkbox" name="metadata[email_optin]" value="1" 
                 {% if user.metadata.email_optin %}
@@ -30,7 +30,7 @@
         </div>
     </div>
 
-    <div class="col-md-6">
+    <div class="col-md-6 col-sm-6">
 
         <div class="form-group">
             <label>Street Address</label>
@@ -74,6 +74,7 @@
         </div>
     </div>
 
-    <div class="clearfix"></div>
-    <button type="submit" data-request="onSave" class="btn btn-primary">Save</button>
+    <div class="col-md-12 col-sm-12">
+        <button type="submit" data-request="onSave" class="btn btn-primary">Save</button>
+    </div>
 </form>
