cleaned up report widget styling

--- a/reportwidgets/friendstoolbar/partials/_widget.htm
+++ b/reportwidgets/friendstoolbar/partials/_widget.htm
@@ -1,4 +1,4 @@
-<div class="scoreboard report-widget">
+<div class="report-widget">
     <div class="scoreboard-item title-value">
         <h4>Total Friends</h4>
         <p><?php print $numFriends ?></p>
@@ -13,4 +13,6 @@
         <h4>This week</h4>
         <p><?php print $weekFriends ?></p>
     </div>
+
+    <div class="clearfix"></div>
 </div>
