- Added a SMS reply when user phone not found in the database after sending a activity code by SMS. - Added an appropriated message if users send an invalid Object Number. - Fixed of the use wrong  cache template notification.

--- a/views/notifications/sms/activity_code_successful.htm
+++ b/views/notifications/sms/activity_code_successful.htm
@@ -1,1 +1,5 @@
 {{ message|raw }}
+
+{% if activity.objectData %}
+You liked: {{ activity.objectData.object_number }} - {{ activity.objectData.object_title }}
+{% endif %}
