- Improved UI to allow user to mark as read notifications. - Added option to limit the number of notifications to display. - Added notification counter to partial header. - Grouped notifications by day when rendering component. - Notification model clean up and minor tweaks.

--- a/components/notificationcounter/default.htm
+++ b/components/notificationcounter/default.htm
@@ -1,3 +1,1 @@
-<a href="{{ goToPage }}" class="btn btn-primary">
-	Notifications <span class="badge">{{ count }}</span>
-</a>	
+<a class="{{ cssClass }}" href="{{ goToPage }}">Notifications {% if count > 0 %}<span class="badge">{{ count }}</span> {% endif %}</a>
