--- a/components/notificationcounter/default.htm
+++ b/components/notificationcounter/default.htm
@@ -1,1 +1,1 @@
-<a class="{{ cssClass }}" href="{{ goToPage }}">Notifications {% if count > 0 %}<span class="badge">{{ count }}</span> {% endif %}</a>
+<a id="notification-counter" class="{{ cssClass }}" href="{{ goToPage }}">Notifications {% if count > 0 %}<span class="badge">{{ count }}</span> {% endif %}</a>
