- Added FlashMessage tag a custom twig token similar to Flash tag but it will render all messages of each flash type - Integrated Notifification system with BadgeManager, Get Rewards and ActivityCode component - Added Mark all as read option to Notification list component - Added group logic to create unique codes for join the group. - First implementation Join group by code component - Minor updates to notification templates - Tweaks to Groups admin UI

--- a/components/notificationcounter/default.htm
+++ b/components/notificationcounter/default.htm
@@ -1,1 +1,1 @@
-<a id="notification-counter" class="{{ cssClass }}" href="{{ goToPage }}">Notifications {% if count > 0 %}<span class="badge">{{ count }}</span> {% endif %}</a>
+<a id="notification-counter" class="{{ cssClass }}" href="{{ goToPage }}">Notifications <span class="badge">{% if count > 0 %}{{ count }}{% endif %}</span> </a>
