ensure for is of post

--- a/components/usertimeout/timeout-modal.htm
+++ b/components/usertimeout/timeout-modal.htm
@@ -1,7 +1,7 @@
 <p>For security, please enter your password to remain logged in.
 You will automatically be logged out for inactivity in <span class="time"></span> seconds.</p>
 
-<form id="stay-logged-in">
+<form id="stay-logged-in" method="post">
     <div class="form-group">
         <input type="password" name="password" id="password" class="form-control" placeholder="Enter your password" />
     </div>
