--- a/components/activitystream/default.htm
+++ b/components/activitystream/default.htm
@@ -4,35 +4,63 @@
             {% for result in results %}
                 <li class="list-group-item">
                     <span class="time-ago">{{ result.timeAgo }}</span>
-                    {% if result.object_type == "Reward" %}
-                    You redeemed the reward
-                    {% elseif result.object_type == "Badge" %}
-                    You earned the badge 
-                    {% else %}
-                    You completed the {{ result.object_type }}
+                    {% if result.action == 'reward' %}
+                        You claimed a reward
+                    {% elseif result.action == 'unlocked' %}
+                        You earned a badge 
+                    {% elseif result.action == 'activity' %}
+                        You completed the activity
+                    {% elseif result.action == 'artwork' %}
+                        Liked a work of art
                     {% endif %}
-                    <div>{{ result.title }}</div>
+                    <div>{{ result.object.title }}</div>
                 </li>
             {% endfor %}
         </ul>
         <div class="links">{{ links|raw }}</div>
     </div>
+
     <div class="col-md-4 col-xs-6">
         <ul class="filter-buttons-wrap button-group buttons">
             <li class="first">
-                <a class="filter-all button large current icon-align-justify" href="#" data-request="onUpdate" data-request-data="filter: 'all'">View All</a>
+                <a 
+                    class="filter-all button large current icon-align-justify" 
+                    href="#" 
+                    data-request="onUpdate" 
+                    data-request-data="filter: 'all'"
+                >View All</a>
             </li>
             <li>
-                <a class="filter-stream-badge button large icon-circle-o" href="#" data-request="onUpdate" data-request-data="filter: 'Badge'">Badges</a>
+                <a 
+                    class="filter-stream-badge button large icon-circle-o" 
+                    href="#" 
+                    data-request="onUpdate" 
+                    data-request-data="filter: 'unlocked'"
+                >Badges</a>
             </li>
             <li>
-                <a class="filter-stream-reward button large icon-trophy" href="#" data-request="onUpdate" data-request-data="filter: 'Reward'">Rewards</a>
+                <a 
+                    class="filter-stream-reward button large icon-trophy" 
+                    href="#" 
+                    data-request="onUpdate" 
+                    data-request-data="filter: 'reward'"
+                >Rewards</a>
             </li>
             <li>
-                <a class="filter-stream-activity button large icon-check" href="#" data-request="onUpdate" data-request-data="filter: 'Activity'">Activities</a>
+                <a 
+                    class="filter-stream-activity button large icon-check" 
+                    href="#" 
+                    data-request="onUpdate" 
+                    data-request-data="filter: 'activity'"
+                >Activities</a>
             </li>
             <li>
-                <a class="filter-stream-step button large icon-list-ol" href="#" data-request="onUpdate" data-request-data="filter: 'Step'">Steps</a>
+                <a 
+                    class="filter-stream-artwork button large icon-check" 
+                    href="#" 
+                    data-request="onUpdate" 
+                    data-request-data="filter: 'artwork'"
+                >Artworks</a>
             </li>
         </ul>
     </div>
