Implement new settings around reward emails

--- a/views/mail/reward.htm
+++ b/views/mail/reward.htm
@@ -1,6 +1,6 @@
 subject = "You have claimed a reward"
 ==
-On behalf of everyone at the Dallas Museum of Art—congratulations!
+On behalf of everyone at the {{ organization }}—congratulations!
 You have earned a new reward.  Thank you for your participation, interest, and support as a DMA Friend!  
 
 For questions or concerns about this reward, please e-mail us at rewards@DMA.org.
